# gta-reversed-diff-test

./: .gitignore  README.md  bugs.tsv  gta-reversed-testing-roadmap.md  phase0-results.md  phase1-results.md  phase2-results.md  phase3-results.md  phase4-results.md  tools.md
configs/: gta-reversed.ini
docker/: Dockerfile.build  patch-cl-zi.sh  toolchain-msvc-wine.cmake
headless_stubs/: ScenarioHelpers.h  TestFramework.h  differential_test.cpp  game_tests.cpp  headless_render_stubs.cpp  soak_test.cpp
headless_stubs/tests/: test_BoneNode.cpp  test_BoneNode2.cpp  test_BoneNodeManager.cpp  test_C3dMarkers.cpp  test_CAEAudioHardware.cpp  test_CAEVehicleAudioEntity.cpp  test_CAccidentManager.cpp  test_CAccidentManager2.cpp  test_CAccidentManager3.cpp  test_CAcquaintance.cpp  test_CAmbientPed.cpp  test_CAnimBlendAssocGroup.cpp  test_CAnimBlendAssociation.cpp  (+522 more)
null_d3d9/: CMakeLists.txt  null_d3d9.cpp  null_d3d9.def
patches/: 01-headless-wine-runtime.patch  02-headless-probes.patch  03-convert-buffer-probes.patch  04-scripts-process-probes.patch  05-headless-game-loop.patch  06-cmake-root-flags.patch  07-cmake-source-flags.patch  08-disable-spdlog.patch  09-tls-elimination.patch  10-dllmain-headless-wiring.patch  11-winmain-probes.patch  12-fix-int-rng-reciprocal.patch
scripts/: build-null-d3d9.sh  build-test-asi.sh  build-tests.sh  build.sh  conanprofile-wine.txt  docker-build.sh  generate-patches.sh  resolve-crash.py  run-differential-test.sh  run-headless.sh  run.sh  setup-wine-prefix.sh  test-toolchain.sh  wine-crash-dump.sh
test_asi/: test_asi.cpp  test_asi.def
